fixed gap on research page

--- a/css/general.css
+++ b/css/general.css
@@ -31,8 +31,8 @@ p {
 h4 {
     Font-Family: 'Open Sans', Sans-Serif;
     font-style: bold;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
     font-size: 1.2em;
 }
 aside {
